--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "typecheck": "tsc --noEmit",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "start:api": "tsx src/api/server.ts"
   },
   "keywords": [
     "threshold-cryptography",
@@ -52,11 +53,17 @@
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.55.0",
     "tsup": "^8.0.1",
+    "tsx": "^4.7.0",
     "typescript": "^5.3.2",
     "vitest": "^1.0.4"
   },
   "dependencies": {
+    "@fastify/cors": "^9.0.1",
+    "@fastify/rate-limit": "^9.1.0",
+    "@noble/ciphers": "^0.5.0",
     "@noble/curves": "^1.3.0",
-    "@noble/hashes": "^1.3.2"
+    "@noble/hashes": "^1.3.2",
+    "fastify": "^4.25.2",
+    "zod": "^3.22.4"
   }
 }
